pac-config/services/nginx/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: bitiq-local
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
