pac-config/services/nginx/10-route-ipiqi.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-ipiqi
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-route53-local
    haproxy.router.openshift.io/redirect-to-https: "true"
spec:
  to:
    kind: Service
    name: nginx-service
  tls:
    termination: edge
  host: ipiqi.com
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-ipiqi-www
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-route53-local
    haproxy.router.openshift.io/redirect-to-https: "true"
spec:
  to:
    kind: Service
    name: nginx-service
  tls:
    termination: edge
  host: www.ipiqi.com
