pac-config/services/nginx/3-route-www.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-www
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01-local
    haproxy.router.openshift.io/redirect-to-https: "true"
spec:
  to:
    kind: Service
    name: nginx-service
  tls:
    termination: edge
  host: www.cyphai.com
