pac-config/services/nginx/4-route-didgo.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-didgo
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-route53-local
    haproxy.router.openshift.io/redirect-to-https: "true"
spec:
  to:
    kind: Service
    name: nginx-service
  tls:
    termination: edge
  host: didgo.com
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-didgo-www
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-route53-local
    haproxy.router.openshift.io/redirect-to-https: "true"
spec:
  to:
    kind: Service
    name: nginx-service
  tls:
    termination: edge
  host: www.didgo.com
