pac-config/services/nginx/5-ingress-paulcapestany.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-paulcapestany
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-route53-local
spec:
  tls:
    - hosts:
        - paulcapestany.com
        - www.paulcapestany.com
      secretName: nginx-paulcapestany-tls
  rules:
    - host: paulcapestany.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080
    - host: www.paulcapestany.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080
