pac-config/services/nginx/5-route-paulcapestany.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-paulcapestany
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01-local
    haproxy.router.openshift.io/redirect-to-https: "true"
spec:
  to:
    kind: Service
    name: nginx-service
  tls:
    termination: edge
  host: paulcapestany.com
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-paulcapestany-www
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01-local
    haproxy.router.openshift.io/redirect-to-https: "true"
spec:
  to:
    kind: Service
    name: nginx-service
  tls:
    termination: edge
  host: www.paulcapestany.com
