pac-config/services/nginx/6-route-bitiq.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-bitiq
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01-local
    haproxy.router.openshift.io/redirect-to-https: "true"
spec:
  to:
    kind: Service
    name: nginx-service
  tls:
    termination: edge
  host: bitiq.io
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-bitiq-www
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01-local
    haproxy.router.openshift.io/redirect-to-https: "true"
spec:
  to:
    kind: Service
    name: nginx-service
  tls:
    termination: edge
  host: www.bitiq.io
