pac-config/services/nginx/8-ingress-noelcapestany.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-noelcapestany
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-route53-local
spec:
  tls:
    - hosts:
        - noelcapestany.com
        - www.noelcapestany.com
      secretName: nginx-noelcapestany-tls
  rules:
    - host: noelcapestany.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080
    - host: www.noelcapestany.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080
