pac-config/services/nginx/9-route-beatricecapestany.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-beatricecapestany
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01-local
    haproxy.router.openshift.io/redirect-to-https: "true"
spec:
  to:
    kind: Service
    name: nginx-service
  tls:
    termination: edge
  host: beatricecapestany.com
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-beatricecapestany-www
  namespace: bitiq-local
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http01-local
    haproxy.router.openshift.io/redirect-to-https: "true"
spec:
  to:
    kind: Service
    name: nginx-service
  tls:
    termination: edge
  host: www.beatricecapestany.com
